// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    classes={
      Object {
        "card": "card",
        "cardNoPadding": "cardNoPadding",
        "shadow0": "shadow0",
        "shadow1": "shadow1",
        "shadow2": "shadow2",
        "shadow3": "shadow3",
        "shadow4": "shadow4",
        "shadow5": "shadow5",
      }
    }
    shadow={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "card shadow3",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "card shadow3",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Card styles matches the snapshot 1`] = `
Object {
  "card": Object {
    "@media screen and (min-width:768px)": Object {
      "padding": 32,
    },
    "background": "#ffffff",
    "borderRadius": 4,
    "padding": 16,
  },
  "cardNoPadding": Object {
    "@media screen and (min-width:768px)": Object {
      "padding": 0,
    },
    "extend": "card",
    "padding": 0,
  },
  "shadow0": Object {
    "boxShadow": "0 0 0 0 rgba(0,0,0,0.0), 0 0 0 0 rgba(0,29,124,0)",
  },
  "shadow1": Object {
    "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.12), 0 1px 6px 0 rgba(0,29,124,0.05)",
  },
  "shadow2": Object {
    "boxShadow": "0 3px 3px -1px rgba(0,0,0,0.12), 0 3px 12px 0 rgba(0,29,124,0.08)",
  },
  "shadow3": Object {
    "boxShadow": "0 6px 5px -3px rgba(0,0,0,0.12), 0 6px 18px 0 rgba(0,29,124,0.08)",
  },
  "shadow4": Object {
    "boxShadow": "0 12px 9px -5px rgba(0,0,0,0.12), 0 10px 32px 0 rgba(0,29,124,0.12)",
  },
  "shadow5": Object {
    "boxShadow": "0 17px 12px -7px rgba(0,0,0,0.12), 0 14px 46px 0 rgba(0,29,124,0.16)",
  },
}
`;

exports[`CardJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Card)
    shadow={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "card": "Card-card-0-1-1",
        "cardNoPadding": "Card-cardNoPadding-0-1-2",
        "shadow0": "Card-shadow0-0-1-3",
        "shadow1": "Card-shadow1-0-1-4",
        "shadow2": "Card-shadow2-0-1-5",
        "shadow3": "Card-shadow3-0-1-6",
        "shadow4": "Card-shadow4-0-1-7",
        "shadow5": "Card-shadow5-0-1-8",
      },
      "shadow": 3,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "card": "Card-card-0-1-1",
          "cardNoPadding": "Card-cardNoPadding-0-1-2",
          "shadow0": "Card-shadow0-0-1-3",
          "shadow1": "Card-shadow1-0-1-4",
          "shadow2": "Card-shadow2-0-1-5",
          "shadow3": "Card-shadow3-0-1-6",
          "shadow4": "Card-shadow4-0-1-7",
          "shadow5": "Card-shadow5-0-1-8",
        },
        "shadow": 3,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
